Added Nav Link and About Page Responsiveness

--- a/about.html
+++ b/about.html
@@ -22,12 +22,16 @@
                 <div class='MHDiv'>
     
                 <nav class='Nav'>
+                            <div class='HImage'>
                             <a href=""><img src="img/lambda-black.png"></a>
+                            </div>
+                            <div class='text'>
                             <a href="index.html">Home</a>
                             <a href="about.html">About</a>
                             <a href="">Products</a>
                             <a href="">Blog</a>
                             <a href="">Contact</a>
+                            </div>
                 </nav>
     
                 <div class='Image'>
